# fuse

./: Cargo.toml  README.md  install.sh  test_batt.py  update.sh
src/: app.rs  main.rs  window.rs
src/core/: audio.rs  autostart.rs  config.rs  mod.rs  quickshell.rs  sidebar_prefs.rs
src/resources/: style.css  style.css.bak
src/tabs/: about.rs  appearance.rs  audio.rs  bar.rs  blink.rs  bluetooth.rs  colors.rs  general.rs  index.rs  lockscreen.rs  look_and_feel.rs  mod.rs  network.rs  notifications.rs  quickshell.rs  quickshell_dashboard.rs  quickshell_sidebar.rs  scripts.rs  system.rs  wallpapers.rs
src/widgets/: color_picker.rs  mod.rs  wallpaper_tile.rs
