[package]
name = "fuse"
version = "0.1.0"
edition = "2021"
description = "Settings application for Quickshell"
authors = ["Alloy Team"]

[dependencies]
gtk4 = { version = "0.7", package = "gtk4", features = ["v4_12"] }
libadwaita = { version = "0.5", features = ["v1_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"
tokio = { version = "1", features = ["full"] }
image = "0.25"
glib = "0.19"
gio = "0.20"
regex = "1"